Add JanusGraph specific authentication.
Issue: #623

This addresses a few concerns.

1) Configure a credential graph that automatically creates the
appropriate JanusGraph indexes.

2) TinkerPop now supports (as of 3.2.6 and 3.3.0) a combined channelizer
for enabling port unification for WebSockets and HTTP. This adds the
necessary classes to enable authentication for one, the other, or both
with JanusGraph specific authenticators.

3) HTTP Basic Auth is (and should be) slow. This adds an HMAC token
authentication mechanism to allow for fast authentication over HTTP.

--- a/janusgraph-all/pom.xml
+++ b/janusgraph-all/pom.xml
@@ -30,6 +30,11 @@
         </dependency>
         <dependency>
             <groupId>org.janusgraph</groupId>
+            <artifactId>janusgraph-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.janusgraph</groupId>
             <artifactId>janusgraph-cassandra</artifactId>
             <version>${project.version}</version>
         </dependency>
