--- a/janusgraph-server/pom.xml
+++ b/janusgraph-server/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.janusgraph</groupId>
     <artifactId>janusgraph</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.2.0</version>
   </parent>
   <artifactId>janusgraph-server</artifactId>
   <name>janusgraph-server</name>
